2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/shift.py (_on_preview_button_clicked):
	Update references to renamed variables and methods.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Always modify sys.path when running from source to ensure that the
	correct directory is at the beginning of the search path.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Add data/icons to icon theme search path if running from source.

	* data/icons/hicolor/16x16/apps/gaupol.png:
	* data/icons/hicolor/22x22/apps/gaupol.png:
	* data/icons/hicolor/24x24/apps/gaupol.png:
	* data/icons/hicolor/32x32/apps/gaupol.png:
	* data/icons/hicolor/scalable/apps/gaupol.svg:
	Arrange icon directories according to icon theme standards.

	* setup.py:
	Update icon file paths.

2007-06-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER.VLC.command):
	Use per-stream options (starting with ":" instead of "--").

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py (disconnect_text_view):
	Exit gracefully if text view was never connected.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/preferences-dialog.glade:
	Unitalicize note about open dialog encoding.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/save.py (save_main):
	Update the mode of subtitles if saving in different format.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	Change the message label wording.

	* gaupol/gtk/dialogs/debug.py (_resize):
	Set the message label size request to wrap the text nicer.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py:
	When the project emits a *-changed signal, move the focus row only if
	it currently is outside the changed rows.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/view.py (_init_columns):
	Do not set text columns to expand since it is too slow.

2007-06-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
