@@ -39,12 +39,12 @@ FORMAT.MICRODVD = gaupol.ConstantMember()
 FORMAT.MICRODVD.label = "MicroDVD"
 FORMAT.MICRODVD.extension = ".sub"
 FORMAT.MICRODVD.has_header = True
-FORMAT.MICRODVD.identifier = r"^\{\d+\}\{\d+\}"
+FORMAT.MICRODVD.identifier = r"^\{-?\d+\}\{-?\d+\}"
 FORMAT.MPL2 = gaupol.ConstantMember()
 FORMAT.MPL2.label = "MPL2"
 FORMAT.MPL2.extension = ".txt"
 FORMAT.MPL2.has_header = False
-FORMAT.MPL2.identifier = r"^\[\d+\]\[\d+\]"
+FORMAT.MPL2.identifier = r"^\[-?\d+\]\[-?\d+\]"
 FORMAT.MPSUB = gaupol.ConstantMember()
 FORMAT.MPSUB.label = "MPsub"
 FORMAT.MPSUB.extension = ".sub"
@@ -59,17 +59,17 @@ FORMAT.SUBRIP = gaupol.ConstantMember()
 FORMAT.SUBRIP.label = "SubRip"
 FORMAT.SUBRIP.extension = ".srt"
 FORMAT.SUBRIP.has_header = False
-FORMAT.SUBRIP.identifier = r"^\d\d:\d\d:\d\d,\d\d\d --> \d\d:\d\d:\d\d,\d\d\d\s*$"
+FORMAT.SUBRIP.identifier = r"^-?\d\d:\d\d:\d\d,\d\d\d --> -?\d\d:\d\d:\d\d,\d\d\d\s*$"
 FORMAT.SUBVIEWER2 = gaupol.ConstantMember()
 FORMAT.SUBVIEWER2.label = "SubViewer 2.0"
 FORMAT.SUBVIEWER2.extension = ".sub"
 FORMAT.SUBVIEWER2.has_header = True
-FORMAT.SUBVIEWER2.identifier = r"^\d\d:\d\d:\d\d\.\d\d,\d\d:\d\d:\d\d\.\d\d\s*$"
+FORMAT.SUBVIEWER2.identifier = r"^-?\d\d:\d\d:\d\d\.\d\d,-?\d\d:\d\d:\d\d\.\d\d\s*$"
 FORMAT.TMPLAYER = gaupol.ConstantMember()
 FORMAT.TMPLAYER.label = "TMPlayer"
 FORMAT.TMPLAYER.extension = ".txt"
 FORMAT.TMPLAYER.has_header = False
-FORMAT.TMPLAYER.identifier = r"^\d\d:\d\d:\d\d:"
+FORMAT.TMPLAYER.identifier = r"^-?\d\d:\d\d:\d\d:"
 FORMAT.finalize()
 
 FRAMERATE = gaupol.ConstantSection()
