@@ -47,7 +47,7 @@ class MicroDVD(SubtitleFile):
         starts = []
         ends = []
         texts = []
-        re_line = re.compile(r"^\{(\d+)\}\{(\d+)\}(.*?)$")
+        re_line = re.compile(r"^\{(-?\d+)\}\{(-?\d+)\}(.*?)$")
         for line in self._read_lines():
             match = re_line.match(line)
             if match is not None:
